[metadata]
name = badger-mk
url = https://github.com/lcnittl/badger-mk
project_urls =
	GitHub: repo = https://github.com/lcnittl/badger-mk
	GitHub: issues = https://github.com/lcnittl/badger-mk/issues
download_url = http://pypi.python.org/pypi/badger-mk
license = GPL-3.0-or-later
license_files = LICENSE
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
description = Makes badges from templates
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Artistic Software
	Topic :: Multimedia :: Graphics
	Topic :: Utilities

[aliases]
release = check -rs sdist bdist_wheel

[options]
include_package_data = True
install_requires =
	gitpython>=3.1.8
	colorlog>=4.2.1
package_dir =
	= src
packages = find:
platforms = any
python_requires = >=3.7
setup_requires =
	setuptools_scm>=4.1
zip_safe = False

[options.entry_points]
console_scripts =
	badger_mk = badger_mk:__main__
	badger-mk = badger_mk:__main__

[options.packages.find]
where = src
